objects/ProgramEnrollment.object
<CustomObject>
    <fields>
        <fullName>API_AlcoholDrugUseDisorderFam__c</fullName>
        <formula>TRIM(LEFT(TEXT(AlcoholDrugUseDisorderFam__c),FIND(&quot;:&quot;, TEXT(AlcoholDrugUseDisorderFam__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_AlcoholDrugUseDisorderFam</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AnnualPercentAMI__c</fullName>
        <formula>TEXT( AnnualPercentAMI__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_AnnualPercentAMI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ChildWelfareYears__c</fullName>
        <formula>TRIM(LEFT(TEXT(ChildWelfareYears__c),FIND(&quot;:&quot;, TEXT(ChildWelfareYears__c))-1))</formula>
        <label>API_ChildWelfareYears</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ChildWellfareMonths__c</fullName>
        <formula>If(NOT(ISBLANK(TEXT(ChildWelfareMonths__c  ))),TEXT(ChildWelfareMonths__c ),&quot;&quot;)</formula>
        <label>API_ChildWellfareMonths</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ClientEnrolledInPATH__c</fullName>
        <formula>TRIM(LEFT(TEXT(ClientEnrolledInPATH__c),FIND(&quot;:&quot;, TEXT(ClientEnrolledInPATH__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_ClientEnrolledInPATH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ClientLeaseholder__c</fullName>
        <formula>TRIM(LEFT(TEXT(ClientLeaseholder__c),FIND(&quot;:&quot;, TEXT(ClientLeaseholder__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_ClientLeaseholder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CoCPrioritized__c</fullName>
        <formula>TRIM(LEFT(TEXT(CoCPrioritized__c),FIND(&quot;:&quot;, TEXT(CoCPrioritized__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_CoCPrioritized</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CountOutreachReferralApproaches__c</fullName>
        <formula>(IF(ISBLANK(CountOutreachReferralApproaches__c), &quot;&quot;, TEXT(CountOutreachReferralApproaches__c)))</formula>
        <label>API_CountOutreachReferralApproaches</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CriminalRecord__c</fullName>
        <formula>TRIM(LEFT(TEXT(CriminalRecord__c),FIND(&quot;:&quot;, TEXT(CriminalRecord__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_CriminalRecord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CurrentPregnant__c</fullName>
        <formula>TRIM(LEFT(TEXT(CurrentPregnant__c),FIND(&quot;:&quot;, TEXT(CurrentPregnant__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_CurrentPregnant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateOfBCPStatus__c</fullName>
        <formula>If(NOT(ISBLANK(DateOfEngagement__c)),

TEXT(YEAR( DateOfBCPStatus__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH( DateOfBCPStatus__c )), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DateOfBCPStatus__c )), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <label>API_DateOfBCPStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateOfEngagement__c</fullName>
        <formula>If(NOT(ISBLANK(DateOfEngagement__c)),

TEXT(YEAR(DateOfEngagement__c))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(DateOfEngagement__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DateOfEngagement__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <label>API_DateOfEngagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateOfPATHStatus__c</fullName>
        <formula>If(NOT(ISBLANK(DateOfPATHStatus__c )),

TEXT(YEAR( DateOfPATHStatus__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(DateOfPATHStatus__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DateOfPATHStatus__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <label>API_DateOfPATHStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DatetoStreetESSH__c</fullName>
        <formula>If(NOT(ISBLANK(DateToStreetESSH__c)),

TEXT(YEAR(DateToStreetESSH__c))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(DateToStreetESSH__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DateToStreetESSH__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <label>API_DateToStreetESSH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DependentUnder6__c</fullName>
        <formula>TEXT( Dependent_Under_6__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DependentUnder6</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DisabledHoH__c</fullName>
        <formula>TRIM(LEFT(TEXT(DisabledHoH__c),FIND(&quot;:&quot;, TEXT( DisabledHoH__c))-1))</formula>
        <label>API_DisabledHoH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DisablingCondition__c</fullName>
        <formula>TRIM(LEFT(TEXT(hmisDisabling_Condition__c),FIND(&quot;:&quot;, TEXT(hmisDisabling_Condition__c))-1))</formula>
        <label>API_DisablingCondition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EligibleForRHY__c</fullName>
        <formula>TRIM(LEFT(TEXT(EligibleForRHY__c),FIND(&quot;:&quot;, TEXT(EligibleForRHY__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_EligibleForRHY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EnrollmentCoC__c</fullName>
        <formula>If(NOT(ISBLANK(TEXT( EnrollmentCoC__c ))),TEXT( EnrollmentCoC__c),&quot;&quot;)</formula>
        <label>API_EnrollmentCoC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Entry_Date__c</fullName>
        <formula>TEXT(YEAR(StartDate))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(StartDate)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(StartDate)), 2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EntryDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EvictionHistory__c</fullName>
        <formula>TRIM(LEFT(TEXT(EvictionHistory__c),FIND(&quot;:&quot;, TEXT(EvictionHistory__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_EvictionHistory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_FormerWardChildWelfare__c</fullName>
        <formula>TRIM(LEFT(TEXT( FormerWardChildWelfare__c),FIND(&quot;:&quot;, TEXT(FormerWardChildWelfare__c ))-1))</formula>
        <label>API_FormerWardChildWelfare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_FormerWardJuvenileJustice__c</fullName>
        <formula>TRIM(LEFT(TEXT( FormerWardJuvenileJustice__c ),FIND(&quot;:&quot;, TEXT(FormerWardJuvenileJustice__c))-1))</formula>
        <label>API_FormerWardJuvenileJustice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_HH5Plus__c</fullName>
        <formula>TRIM(LEFT(TEXT(HH5Plus__c),FIND(&quot;:&quot;, TEXT(HH5Plus__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_HH5Plus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_HOHLeaseholder__c</fullName>
        <formula>TRIM(LEFT(TEXT(HOHLeaseholder__c),FIND(&quot;:&quot;, TEXT(HOHLeaseholder__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_HOHLeaseholder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_HPScreeningScore__c</fullName>
        <formula>TEXT(HPScreeningScore__c)</formula>
        <label>API_HPScreeningScore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IncarceratedAdult__c</fullName>
        <formula>TRIM(LEFT(TEXT(IncarceratedAdult__c),FIND(&quot;:&quot;, TEXT(IncarceratedAdult__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_IncarceratedAdult</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IncarceratedParent__c</fullName>
        <formula>TRIM(LEFT(TEXT(IncarceratedParent__c),FIND(&quot;:&quot;, TEXT(IncarceratedParent__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_IncarceratedParent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_InsufficientIncome__c</fullName>
        <formula>TRIM(LEFT(TEXT(InsufficientIncome__c),FIND(&quot;:&quot;, TEXT(InsufficientIncome__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_InsufficientIncome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_JuvenileJusticeMonths__c</fullName>
        <formula>TEXT(JuvenileJusticeMonths__c)</formula>
        <label>API_JuvenileJusticeMonths</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_JuvenileJusticeYears__c</fullName>
        <formula>TRIM(LEFT(TEXT(JuvenileJusticeYears__c),FIND(&quot;:&quot;, TEXT( JuvenileJusticeYears__c))-1))</formula>
        <label>API_JuvenileJusticeYears</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LOSUnderThreshold__c</fullName>
        <formula>TRIM(LEFT(TEXT(LOSUnderThreshold__c),FIND(&quot;:&quot;, TEXT(LOSUnderThreshold__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_LOSUnderThreshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LengthOfStay__c</fullName>
        <formula>TRIM(LEFT(TEXT(LengthOfStay__c),FIND(&quot;:&quot;, TEXT(LengthOfStay__c))-1))</formula>
        <label>API_LengthOfStay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LiteralHomelessHistory__c</fullName>
        <formula>TRIM(LEFT(TEXT(LiteralHomelessHistory__c),FIND(&quot;:&quot;, TEXT(LiteralHomelessHistory__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_LiteralHomelessHistory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LivingSituation__c</fullName>
        <formula>TRIM(LEFT(TEXT( LivingSituation__c ),FIND(&quot;:&quot;, TEXT(LivingSituation__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_LivingSituation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_MentalHealthDisorderFam__c</fullName>
        <formula>TRIM(LEFT(TEXT(MentalHealthDisorderFam__c),FIND(&quot;:&quot;, TEXT(MentalHealthDisorderFam__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_MentalHealthDisorderFam</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_MonthsHomelessPastThreeYears__c</fullName>
        <formula>TRIM(LEFT(TEXT(MonthsHomelessPastThreeYears__c),FIND(&quot;:&quot;, TEXT(MonthsHomelessPastThreeYears__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_MonthsHomelessPastThreeYears</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_MoveinDate__c</fullName>
        <formula>If(NOT(ISBLANK(MoveInDate__c)),

TEXT(YEAR( MoveInDate__c))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(MoveInDate__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(MoveInDate__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <label>MoveInDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherPreferredLanguage__c</fullName>
        <formula>IF(ISBLANK(OtherPreferredLanguage__c),&quot;&quot;,(OtherPreferredLanguage__c ))</formula>
        <label>API_OtherPreferredLanguage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PercentAMI__c</fullName>
        <formula>TRIM(LEFT(TEXT( PercentAMI__c ),FIND(&quot;:&quot;, TEXT( PercentAMI__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_PercentAMI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PhysicalDisabilityFam__c</fullName>
        <formula>TRIM(LEFT(TEXT(PhysicalDisabilityFam__c),FIND(&quot;:&quot;, TEXT(PhysicalDisabilityFam__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_PhysicalDisabilityFam</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PreferredLanguage__c</fullName>
        <formula>TEXT(PreferredLanguage__c)</formula>
        <label>API_PreferredLanguage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PreviousStreetESSH__c</fullName>
        <formula>TRIM(LEFT(TEXT(PreviousStreetESSH__c),FIND(&quot;:&quot;, TEXT(PreviousStreetESSH__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_PreviousStreetESSH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PrisonDischarge__c</fullName>
        <formula>TRIM(LEFT(TEXT( PrisonDischarge__c),FIND(&quot;:&quot;, TEXT(PrisonDischarge__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_PrisonDischarge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ReasonNoServices__c</fullName>
        <formula>TRIM(LEFT(TEXT( ReasonNoServices__c ),FIND(&quot;:&quot;, TEXT( ReasonNoServices__c ))-1))</formula>
        <label>API_ReasonNoServices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ReasonNotEnrolled__c</fullName>
        <formula>TRIM(LEFT(TEXT( ReasonNotEnrolled__c ),FIND(&quot;:&quot;, TEXT( ReasonNotEnrolled__c ))-1))</formula>
        <label>API_ReasonNotEnrolled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ReferralSource__c</fullName>
        <formula>TRIM(LEFT(TEXT( ReferralSource__c ),FIND(&quot;:&quot;, TEXT( ReferralSource__c))-1))</formula>
        <label>API_ReferralSource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_RelationshipToHoH__c</fullName>
        <formula>TRIM(LEFT(TEXT( RelationshipToHoH__c ),FIND(&quot;:&quot;, TEXT( RelationshipToHoH__c ))-1))</formula>
        <label>API_RelationshipToHoH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_RentalSubsidyType__c</fullName>
        <formula>TRIM(LEFT(TEXT( RentalSubsidyType__c ),FIND(&quot;:&quot;, TEXT( RentalSubsidyType__c))-1))</formula>
        <label>API_RentalSubsidyType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_RunawayYouth__c</fullName>
        <formula>TRIM(LEFT(TEXT( RunawayYouth__c ),FIND(&quot;:&quot;, TEXT( RunawayYouth__c ))-1))</formula>
        <label>API_RunawayYouth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SSexualOrientationOther__c</fullName>
        <formula>If(NOT(ISBLANK( SexualOrientationOther__c )),(SexualOrientationOther__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SSexualOrientationOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SexOffender__c</fullName>
        <formula>TRIM(LEFT(TEXT(SexOffender__c),FIND(&quot;:&quot;, TEXT(SexOffender__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SexOffender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SexualOrientationOther__c</fullName>
        <formula>If(NOT(ISBLANK( SexualOrientationOther__c )),(SexualOrientationOther__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SexualOrientationOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SexualOrientation__c</fullName>
        <formula>TRIM(LEFT(TEXT( SexualOrientation__c ),FIND(&quot;:&quot;, TEXT( SexualOrientation__c))-1))</formula>
        <label>API_SexualOrientation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SingleParent__c</fullName>
        <formula>TRIM(LEFT(TEXT(SingleParent__c),FIND(&quot;:&quot;, TEXT(SingleParent__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SingleParent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SubsidyAtRisk__c</fullName>
        <formula>TRIM(LEFT(TEXT(SubsidyAtRisk__c),FIND(&quot;:&quot;, TEXT(SubsidyAtRisk__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SubsidyAtRisk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TargetScreenReqd__c</fullName>
        <formula>TRIM(LEFT(TEXT( TargetScreenReqd__c ),FIND(&quot;:&quot;, TEXT( TargetScreenReqd__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_TargetScreenReqd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ThresholdScore__c</fullName>
        <formula>TEXT( ThresholdScore__c )</formula>
        <label>API_ThresholdScore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TimeToHousingLoss__c</fullName>
        <formula>TEXT(TimeToHousingLoss__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_TimeToHousingLoss</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TimesHomelessPastThreeYears__c</fullName>
        <formula>TRIM(LEFT(TEXT(TimesHomelessPastThreeYears__c),FIND(&quot;:&quot;, TEXT(TimesHomelessPastThreeYears__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_TimesHomelessPastThreeYears</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TranslationNeeded__c</fullName>
        <formula>TRIM(LEFT(TEXT(TranslationNeeded__c),FIND(&quot;:&quot;, TEXT(TranslationNeeded__c))-1))</formula>
        <label>API_TranslationNeeded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_UnemploymentFam__c</fullName>
        <formula>TRIM(LEFT(TEXT( UnemploymentFam__c ),FIND(&quot;:&quot;, TEXT( UnemploymentFam__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_UnemploymentFam</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VAMCStation__c</fullName>
        <formula>TRIM(LEFT(TEXT(VAMCStation__c),FIND(&quot;:&quot;, TEXT(VAMCStation__c))-1))</formula>
        <label>API_VAMCStation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcoholDrugUseDisorderFam__c</fullName>
        <label>Alcohol Drug Use Disorder Fam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualPercentAMI__c</fullName>
        <label>Annual Percent AMI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>$0 (i.e., not employed, not receiving cash benefits, no other current income)</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1-14% of Area Median Income (AMI) for household size</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>15-30% of AMI for household size</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>More than 30% of AMI for household size</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChildWelfareMonths__c</fullName>
        <label>Child Welfare Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildWelfareYears__c</fullName>
        <label>Child Welfare Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisRHYNumberofYears</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientEnrolledInPATH__c</fullName>
        <label>Client Enrolled in PATH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientLeaseholder__c</fullName>
        <label>Client Lease Holder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoCPrioritized__c</fullName>
        <label>CoC Prioritized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountOutreachReferralApproaches__c</fullName>
        <label>Count Outreach Referral Approaches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CriminalRecord__c</fullName>
        <label>Criminal Record</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentPregnant__c</fullName>
        <label>Current Pregnant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DeletedDate__c)),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBCPStatus__c</fullName>
        <label>Date of BCP Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfEngagement__c</fullName>
        <label>Date of Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfPATHStatus__c</fullName>
        <label>Date of PATH Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateToStreetESSH__c</fullName>
        <label>Date to Street ESSH</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateUpdated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(  LastModifiedDate  )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( LastModifiedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dependent_Under_6__c</fullName>
        <label>Dependent Under 6</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Youngest child is under 1 year old</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Youngest child is 1 to 6 years old and/or one or more children (any age) require significant care</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisabledHoH__c</fullName>
        <label>Disabled HoH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibleForRHY__c</fullName>
        <label>Eligible for RHY</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentCoC__c</fullName>
        <label>Enrollment CoC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisContinuumOfCareCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnrollmentID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvictionHistory__c</fullName>
        <label>Eviction History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisEvictionHistory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormerWardChildWelfare__c</fullName>
        <label>Former Ward Child Welfare</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormerWardJuvenileJustice__c</fullName>
        <label>Former Ward Juvenile Justice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HH5Plus__c</fullName>
        <label>HH5 Plus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HOHLeaseholder__c</fullName>
        <label>HOHLeaseholder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPScreeningScore__c</fullName>
        <label>HP Screening Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdID__c</fullName>
        <formula>Household__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HouseholdID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Enrollments (Household)</relationshipLabel>
        <relationshipName>Program_Enrollments_HH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncarceratedAdult__c</fullName>
        <label>Incarcerated Adult</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisIncarceratedAdult</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncarceratedParent__c</fullName>
        <label>Incarcerated Parent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsufficientIncome__c</fullName>
        <label>Insufficient Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JuvenileJusticeMonths__c</fullName>
        <label>Juvenile Justice Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JuvenileJusticeYears__c</fullName>
        <label>Juvenile Justice Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisRHYNumberofYears</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOSUnderThreshold__c</fullName>
        <label>LOS Under Threshold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LengthOfStay__c</fullName>
        <label>Length of Stay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisLengthOfStay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiteralHomelessHistory__c</fullName>
        <label>Literal Homeless History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisLiteralHomelessHistory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LivingSituationType__c</fullName>
        <label>Living Situation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless Situation</fullName>
                </value>
                <value>
                    <fullName>Institutional Situations</fullName>
                </value>
                <value>
                    <fullName>Temporary Housing Situation</fullName>
                </value>
                <value>
                    <fullName>Permanent Housing Situation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LivingSituation__c</fullName>
        <label>Living Situation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LivingSituationType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisLivingSituationOptionList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MentalHealthDisorderFam__c</fullName>
        <label>Mental Health Disorder Fam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthsHomelessPastThreeYears__c</fullName>
        <label>Months Homeless Past Three Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisMonthsHomelessPastThreeYears</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MoveInDate__c</fullName>
        <label>Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NameDataQuality__c</fullName>
        <formula>Account.PersonContact.API_NameDataQuality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameDataQuality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Suffix__c</fullName>
        <formula>Account.PersonContact.NameSuffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPreferredLanguage__c</fullName>
        <label>Other Preferred Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentAMI__c</fullName>
        <label>Percent AMI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisPercentAMI</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonalID__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PersonalID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalDisabilityFam__c</fullName>
        <label>Physical Disability Fam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
</CustomObject>